--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -5,9 +5,22 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  router:
     runs-on: SANVM07
-    environment: dev
+    environment: dev_router
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Update 3rd party docker images
+        run: docker compose -f stacks/dev/router.docker-compose.yml -p dev_router_eventsresonite --profile "*" pull
+
+      - name: Spin up containers
+        run: docker compose -f stacks/dev/router.docker-compose.yml -p dev_router_eventsresonite --profile "*" up -d
+
+  community:
+    runs-on: SANVM07
+    environment: dev_community
 
     steps:
       - uses: actions/checkout@v3
@@ -27,9 +40,7 @@ jobs:
           DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
           PRIVATE_DOMAIN: ${{ vars.PRIVATE_DOMAIN }}
           PUBLIC_DOMAIN: ${{ vars.PUBLIC_DOMAIN }}
-        run: |
-          docker compose -f stacks/dev/community.docker-compose.yml -p dev_community_eventsresonite --profile "*" build \
-            docker compose -f stacks/dev/official.docker-compose.yml -p dev_community_eventsresonite --profile "*" build
+        run: docker compose -f stacks/dev/community.docker-compose.yml -p dev_community_eventsresonite --profile "*" build
 
       - name: Update 3rd party docker images
         env:
@@ -46,10 +57,7 @@ jobs:
           DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
           PRIVATE_DOMAIN: ${{ vars.PRIVATE_DOMAIN }}
           PUBLIC_DOMAIN: ${{ vars.PUBLIC_DOMAIN }}
-        run: |
-          docker compose -f stacks/dev/router.docker-compose.yml -p dev_community_eventsresonite --profile "*" pull \
-            docker compose -f stacks/dev/community.docker-compose.yml -p dev_community_eventsresonite --profile "*" pull \
-            docker compose -f stacks/dev/official.docker-compose.yml -p dev_community_eventsresonite --profile "*" pull
+        run: docker compose -f stacks/dev/community.docker-compose.yml -p dev_community_eventsresonite --profile "*" pull
 
       - name: Spin up containers
         env:
@@ -66,7 +74,62 @@ jobs:
           DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
           PRIVATE_DOMAIN: ${{ vars.PRIVATE_DOMAIN }}
           PUBLIC_DOMAIN: ${{ vars.PUBLIC_DOMAIN }}
-        run: |
-          docker compose -f stacks/dev/router.docker-compose.yml -p dev_community_eventsresonite --profile "*" up -d \
-            docker compose -f stacks/dev/community.docker-compose.yml -p dev_community_eventsresonite --profile "*" up -d \
-            docker compose -f stacks/dev/official.docker-compose.yml -p dev_community_eventsresonite --profile "*" up -d
+        run: docker compose -f stacks/dev/community.docker-compose.yml -p dev_community_eventsresonite --profile "*" up -d
+
+  official:
+    runs-on: SANVM07
+    environment: dev_official
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Build app
+        env:
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DISCORD_SECRET: ${{ secrets.DISCORD_SECRET }}
+          SECRET: ${{ secrets.SECRET }}
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+          CACHE_URL: ${{ vars.CACHE_URL }}
+          DISCORD_CLIENT_ID: ${{ vars.DISCORD_CLIENT_ID }}
+          DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
+          PRIVATE_DOMAIN: ${{ vars.PRIVATE_DOMAIN }}
+          PUBLIC_DOMAIN: ${{ vars.PUBLIC_DOMAIN }}
+        run: docker compose -f stacks/dev/official.docker-compose.yml -p dev_official_eventsresonite --profile "*" build
+
+      - name: Update 3rd party docker images
+        env:
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DISCORD_SECRET: ${{ secrets.DISCORD_SECRET }}
+          SECRET: ${{ secrets.SECRET }}
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+          CACHE_URL: ${{ vars.CACHE_URL }}
+          DISCORD_CLIENT_ID: ${{ vars.DISCORD_CLIENT_ID }}
+          DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
+          PRIVATE_DOMAIN: ${{ vars.PRIVATE_DOMAIN }}
+          PUBLIC_DOMAIN: ${{ vars.PUBLIC_DOMAIN }}
+        run: docker compose -f stacks/dev/official.docker-compose.yml -p dev_official_eventsresonite --profile "*" pull
+
+      - name: Spin up containers
+        env:
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DISCORD_SECRET: ${{ secrets.DISCORD_SECRET }}
+          SECRET: ${{ secrets.SECRET }}
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+          CACHE_URL: ${{ vars.CACHE_URL }}
+          DISCORD_CLIENT_ID: ${{ vars.DISCORD_CLIENT_ID }}
+          DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
+          PRIVATE_DOMAIN: ${{ vars.PRIVATE_DOMAIN }}
+          PUBLIC_DOMAIN: ${{ vars.PUBLIC_DOMAIN }}
+        run: docker compose -f stacks/dev/official.docker-compose.yml -p dev_official_eventsresonite --profile "*" up -d
