--- a/stacks/dev/community.docker-compose.yml
+++ b/stacks/dev/community.docker-compose.yml
@@ -25,7 +25,7 @@ services:
       start_period: 30s
 
   migrations:
-    build: .
+    build: ../..
     command: >
       /bin/bash -c "
       poetry run alembic upgrade head;
@@ -60,7 +60,7 @@ services:
       - client
 
   signals_manager:
-    build: .
+    build: ../..
     restart: always
     command: poetry run signals_manager
     profiles:
@@ -89,7 +89,7 @@ services:
       - PRIVATE_DOMAIN=${PRIVATE_DOMAIN}
 
   api_client:
-    build: .
+    build: ../..
     restart: always
     profiles:
       - client
@@ -146,7 +146,7 @@ services:
       - traefik.http.routers.dev_api_v2_client_legacy_public.entrypoints=web
 
   web_client:
-    build: .
+    build: ../..
     restart: always
     profiles:
       - client
@@ -186,7 +186,7 @@ services:
 
   mkdocs:
     build:
-      context: .
+      context: ../..
       dockerfile: Dockerfile.mkdocs
     ports:
       - "8002:8000"
