--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -60,19 +60,20 @@ nav:
     - ClientIntegration/versioning.md
   - Developer Guide:
     - DeveloperGuide/development-guide.md
+    - DeveloperGuide/architecture.md
+    - DeveloperGuide/requirements.md
+    - DeveloperGuide/setup.md
+    - DeveloperGuide/installation.md
+    - DeveloperGuide/usage.md
+    - DeveloperGuide/migrations.md
+    - DeveloperGuide/testing.md
+  - Administrator Guide:
+    - AdministratorGuide/administration-guide.md
     - Deployment:
-      - DeveloperGuide/deployment/deployment.md
-      - DeveloperGuide/deployment/requirements.md
-      - DeveloperGuide/deployment/installation.md
-      - DeveloperGuide/deployment/configuration.md
-    - Development:
-      - DeveloperGuide/development/development.md
-      - DeveloperGuide/development/architecture.md
-      - DeveloperGuide/development/requirements.md
-      - DeveloperGuide/development/setup.md
-      - DeveloperGuide/development/installation.md
-      - DeveloperGuide/development/usage.md
-      - DeveloperGuide/development/migrations.md
-      - DeveloperGuide/development/testing.md
+      - AdministratorGuide/deployment/deployment.md
+      - AdministratorGuide/deployment/requirements.md
+      - AdministratorGuide/deployment/installation.md
+    - Configuration:
+      - AdministratorGuide/configuration/configuration.md
   - Support:
     - support.md
