--- a/stacks/dev/official.docker-compose.yml
+++ b/stacks/dev/official.docker-compose.yml
@@ -23,8 +23,10 @@ services:
       timeout: 30s
       retries: 5
       start_period: 30s
+    networks:
+      - shared_backend_network
 
-  migrations:
+  migrations_official:
     build: ../..
     command: >
       /bin/bash -c "
@@ -58,15 +60,17 @@ services:
     profiles:
       - manager
       - client
+    networks:
+      - shared_backend_network
 
-  signals_manager:
+  signals_manager_official:
     build: ../..
     restart: always
     command: poetry run signals_manager
     profiles:
       - manager
     depends_on:
-      migrations:
+      migrations_official:
         condition: service_completed_successfully
       database_official:
         condition: service_healthy
@@ -87,20 +91,24 @@ services:
       - DISCORD_REDIRECT_URL=${DISCORD_REDIRECT_URL}
       - PUBLIC_DOMAIN=${PUBLIC_DOMAIN}
       - PRIVATE_DOMAIN=${PRIVATE_DOMAIN}
+    networks:
+      - shared_backend_network
 
-  api_client:
+  api_client_official:
     build: ../..
     restart: always
     profiles:
       - client
     command: poetry run api_client
     depends_on:
-      migrations:
+      migrations_official:
         condition: service_completed_successfully
       database_official:
         condition: service_healthy
     ports:
       - '8100:8000'
+    networks:
+      - shared_backend_network
     secrets:
       - database_url
       - discord_secret
@@ -122,30 +130,32 @@ services:
       - traefik.enable=true
 
       # Modern API route
-      - traefik.http.routers.dev_api_v1_client_official.rule=Host(`official.dev.resonite-communities.com`) && PathPrefix(`/api`)
-      - traefik.http.routers.dev_api_v1_client_official.entrypoints=web
+      - traefik.http.routers.api_client_official.rule=Host(`official.dev.resonite-communities.com`) && PathPrefix(`/api`)
+      - traefik.http.routers.api_client_official.entrypoints=web
 
       # Public events legacy API v1 route
-      - traefik.http.routers.dev_api_v1_client_legacy_public_official.rule=Host(`official.dev.resonite-communities.com`) && PathPrefix(`/v1`)
-      - traefik.http.routers.dev_api_v1_client_legacy_public_official.entrypoints=web
+      - traefik.http.routers.api_v1_client_legacy_public_official.rule=Host(`official.dev.resonite-communities.com`) && PathPrefix(`/v1`)
+      - traefik.http.routers.api_v1_client_legacy_public_official.entrypoints=web
 
       # Public events legacy API V2 route
-      - traefik.http.routers.dev_api_v2_client_legacy_public_official.rule=Host(`official.dev.resonite-communities.com`) && PathPrefix(`/v2`)
-      - traefik.http.routers.dev_api_v2_client_legacy_public_official.entrypoints=web
+      - traefik.http.routers.api_v2_client_legacy_public_official.rule=Host(`official.dev.resonite-communities.com`) && PathPrefix(`/v2`)
+      - traefik.http.routers.api_v2_client_legacy_public_official.entrypoints=web
 
-  web_client:
+  web_client_official:
     build: ../..
     restart: always
     profiles:
       - client
     command: poetry run web_client
     depends_on:
-      migrations:
+      migrations_official:
         condition: service_completed_successfully
       database_official:
         condition: service_healthy
     ports:
       - '8101:8001'
+    networks:
+      - shared_backend_network
     secrets:
       - database_url
       - discord_secret
@@ -191,6 +201,5 @@ volumes:
     driver: local
 
 networks:
-  default:
-    name: dev_official_network
+  shared_backend_network:
     external: true
